Fixes #134 Company Logo aligned in footer

--- a/css/custom.css
+++ b/css/custom.css
@@ -237,7 +237,7 @@ text-align:right;
 .powered-by-copyright {
 font-size: 10px;
 text-align:right;
-padding-top: 40px;
+padding-top: 0px;
 }
 
 /* RESPONSIVE STYLES
